# nshare-calc

./: README.md  nshare_calc.py  pyproject.toml  requirements.txt
src/nshare_calc/: __init__.py  nshare_calc.py
test/: test1.py
