[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nshare_calc"
version = "0.1.0"
authors = [
  { name="Yfiua", email="yfiua6@gmail.com" },
]
description = "Python library for calculating the optimal number of shares given a portfolio using integer programming."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/yfiua/nshare_calc"
"Bug Tracker" = "https://github.com/yfiua/nshare_calc/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
